@@ -12,6 +12,7 @@ v1.3.0 "libere dorme":
  - Add Japanese translation
  - Add Russian translation
  - Add Spearglish (Old English) translation
+ - Add Ryukyuan translation
 
 v1.2.0 "cotidie morimur":
  - Make text wrapping not use hyphens
